Fixed display issues encountered on mobile phones

--- a/src/css/Activities.css
+++ b/src/css/Activities.css
@@ -69,6 +69,13 @@
     }
 }
 
+@media only screen and (max-width: 500px) {
+    .rightTile{
+        width: 88%;
+        align-self: center;
+    }
+}
+
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
     .rightTile{
